src/objects/Monthly_Rep_Goals__c.object
<CustomObject>
    <fields>
        <fullName>Goal_Label_for_Rep_Dash__c</fullName>
        <label>Goal Label (for Rep Dash)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum__c</fullName>
        <label>Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum__c</fullName>
        <label>Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_Type__c</fullName>
        <label>Rep Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Type__c</fullName>
        <label>Team Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Monthly Rep Goals</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Goal_Label_for_Rep_Dash__c</columns>
        <columns>Team_Type__c</columns>
        <columns>Rep_Type__c</columns>
        <columns>Goal__c</columns>
        <columns>Minimum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Goal_Label_for_Rep_Dash__c</field>
            <operation>contains</operation>
            <value>pipe,eval</value>
        </filters>
        <label>Pipe &amp; Eval Goals</label>
    </listViews>
    <listViews>
        <fullName>Enterpris2</fullName>
        <columns>NAME</columns>
        <columns>Goal_Label_for_Rep_Dash__c</columns>
        <columns>Team_Type__c</columns>
        <columns>Rep_Type__c</columns>
        <columns>Goal__c</columns>
        <columns>Minimum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team_Type__c</field>
            <operation>contains</operation>
            <value>Enterprise</value>
        </filters>
        <label>Enterprise</label>
    </listViews>
    <listViews>
        <fullName>Enterprise_BDRs</fullName>
        <columns>NAME</columns>
        <columns>Goal_Label_for_Rep_Dash__c</columns>
        <columns>Team_Type__c</columns>
        <columns>Rep_Type__c</columns>
        <columns>Goal__c</columns>
        <columns>Minimum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team_Type__c</field>
            <operation>contains</operation>
            <value>Enterprise</value>
        </filters>
        <filters>
            <field>Rep_Type__c</field>
            <operation>contains</operation>
            <value>BDR</value>
        </filters>
        <label>Enterprise BDRs</label>
    </listViews>
    <listViews>
        <fullName>Globals_US</fullName>
        <columns>NAME</columns>
        <columns>Goal_Label_for_Rep_Dash__c</columns>
        <columns>Team_Type__c</columns>
        <columns>Rep_Type__c</columns>
        <columns>Goal__c</columns>
        <columns>Minimum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team_Type__c</field>
            <operation>contains</operation>
            <value>Global</value>
        </filters>
        <label>Globals US</label>
    </listViews>
    <nameField>
        <label>Goal Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Rep Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>